@@ -24,4 +24,6 @@ extern int  _GMP_pminus1_factor2(mpz_t n, mpz_t f, UV rounds);
 extern int  _GMP_holf_factor(mpz_t n, mpz_t f, UV rounds);
 extern int  _GMP_squfof_factor(mpz_t n, mpz_t f, UV rounds);
 
+extern void _GMP_lcm_of_consecutive_integers(UV B, mpz_t m);
+
 #endif
